--- a/authoritative_server/index.html
+++ b/authoritative_server/index.html
@@ -4,7 +4,14 @@
         <meta charset="utf-8">
     </head>
     <body>
+        <script src="https://cdn.jsdelivr.net/npm/@mikewesthad/dungeon@1.2.2"></script>
         <script src="https://cdn.jsdelivr.net/npm/phaser@3.15.1/dist/phaser.min.js"></script>
+
+        <script src="js/player.js"></script>
+        <script src="js/tile-mapping.js"></script>
+        <script src="js/tilemap-visibility.js"></script>
+        <script src="js/dungeon-scene.js"></script>
+
         <script src="js/game.js"></script>
     </body>
 </html>
