--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,14 @@
 
     <head>
         <meta charset="utf-8">
+        <link rel="shortcut icon" href="#">
     </head>
 
     <body>
+        <script src="https://cdn.jsdelivr.net/npm/@mikewesthad/dungeon@1.2.2"></script>
         <script src="/socket.io/socket.io.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/phaser@3.15.1/dist/phaser.min.js"></script>
-        <script src="js/game.js"></script>
+        <script src="js/game.js" type="module"></script>
     </body>
 
 </html>
