--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
     </head>
 
     <body>
-        <script src="https://cdn.jsdelivr.net/npm/@mikewesthad/dungeon@1.2.2"></script>
+        <!--<script src="https://cdn.jsdelivr.net/npm/@mikewesthad/dungeon@1.2.2"></script>-->
+        <script src="https://cdn.jsdelivr.net/npm/@mikewesthad/dungeon@2.0.1/dist/dungeon.min.js"></script>
         <script src="/socket.io/socket.io.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/phaser@3.15.1/dist/phaser.min.js"></script>
         <script src="js/game.js" type="module"></script>
